# banking_transfer_CX

./: .gitignore  Makefile  README.md  locustfile.py  manage.py  pyproject.toml
apps/certificates/: models.py  serializers.py  urls.py  utils.py  views.py
apps/certificates/migrations/: 0001_initial.py  0002_alter_user_unique_together.py  0003_alter_certificate_id_alter_user_id.py  0004_alter_certificatetransfer_order.py
apps/certificates/tests/: test_certificate_apis.py
apps/core/: swagger.py  views.py
django_project/: asgi.py  settings.py  urls.py  wsgi.py
django_project/settings/: base.py  test.py
templates/: certificate_detail.html
